--- a/attendance.html
+++ b/attendance.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Attendance - GLBXTNT ERP</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h2>Attendance</h2>
-    <div id="attendance-actions"></div>
+    <div id="attendance-actions">Loading...</div>
     <div id="today-attendance"></div>
     <a href="main.html">Back to Dashboard</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
-  <script src="js/supabase.js"></script>
-  <script src="js/attendance.js"></script>
+  <script src="supabase.js"></script>
+  <script src="attendance.js"></script>
 </body>
 </html>
