--- a/audit.html
+++ b/audit.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audit Logs - GLBXTNT ERP</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h2>Audit Logs</h2>
-    <div id="audit-list"></div>
+    <div id="audit-list">Loading...</div>
     <a href="main.html">Back to Dashboard</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
-  <script src="js/supabase.js"></script>
-  <script src="js/audit.js"></script>
+  <script src="supabase.js"></script>
+  <script src="audit.js"></script>
 </body>
 </html>
