--- a/salary.html
+++ b/salary.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salary Entry - GLBXTNT ERP</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h2>Salary Entry</h2>
-    <div id="salary-form-container"></div>
+    <div id="salary-form-container">Loading...</div>
     <div id="salary-list"></div>
     <a href="main.html">Back to Dashboard</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
-  <script src="js/supabase.js"></script>
-  <script src="js/salary.js"></script>
+  <script src="supabase.js"></script>
+  <script src="salary.js"></script>
 </body>
 </html>
