Update index.html for visibility of new user

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </form>
 
       <div style="display:flex; justify-content:space-between; margin-top:15px;">
-        <button type="button" id="toggle-mode-btn" class="secondary" style="border:none; background:none; cursor:pointer;">New here? Create Account</button>
+        <button type="button" id="toggle-mode-btn" class="secondary" style="border:none; color:#059669; background:none; cursor:pointer;">New here? Create Account</button>
         <button type="button" id="forgot-btn" class="secondary" style="border:none; color:#059669; background:none; cursor:pointer;">Forgot Password?</button>
       </div>
     </div>
@@ -42,7 +42,7 @@
     </div>
     
     <div id="auth-error" class="error" style="margin-top:15px; font-size:0.9em; min-height: 20px;"></div>
-    <div id="login-box">...</div>
+    <div id="login-box"></div>
     <div id="forgot-form" class="hidden">...</div>
 
     <div id="update-password-box" class="hidden">
@@ -60,4 +60,5 @@
   <script src="supabase.js"></script>
   <script src="login.js"></script>
 </body>
+
 </html>
