--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
       <li><a href="documents.html">📂 Document Vault</a></li>
       <li><a href="finance.html" id="finance-link" style="display:none;">📈 Company Finance</a></li>
       <li><a href="performance.html">⭐ Performance & Appraisals</a></li>
+      <li><a href="history.html" id="history-link" style="display:none; color:#6f42c1; font-weight:bold;">📜 Company Master Records</a></li>
       <li><a href="audit.html" id="audit-link" style="display:none;">🛡️ Audit Logs</a></li>
     </ul>
   </div>
