--- a/main.html
+++ b/main.html
@@ -41,6 +41,13 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="main.js"></script>
+
+  <nav class="mobile-nav">
+  <a href="main.html" class="nav-item">🏠<br>Home</a>
+  <a href="attendance.html" class="nav-item">⏱️<br>Clock</a>
+  <a href="leave.html" class="nav-item">🗓️<br>Leave</a>
+  <a href="status.html" class="nav-item">🔴<br>Status</a>
+</nav>
 </body>
 
 </html>
