--- a/expenses.html
+++ b/expenses.html
@@ -3,28 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <title>Expense Claims - GLBXTNT ERP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <style>
-    .status-Pending { background: #fff3cd; color: #856404; padding: 2px 6px; border-radius: 4px; }
-    .status-Approved { background: #cce5ff; color: #004085; padding: 2px 6px; border-radius: 4px; }
-    .status-Rejected { background: #f8d7da; color: #721c24; padding: 2px 6px; border-radius: 4px; }
-    .status-Reimbursed { background: #d4edda; color: #155724; padding: 2px 6px; border-radius: 4px; font-weight: bold; }
+    /* STATUS BADGES */
+    .status-Pending { background: #fff3cd; color: #856404; padding: 2px 8px; border-radius: 4px; font-size: 0.85em; }
+    .status-Approved { background: #cce5ff; color: #004085; padding: 2px 8px; border-radius: 4px; font-size: 0.85em; }
+    .status-Rejected { background: #f8d7da; color: #721c24; padding: 2px 8px; border-radius: 4px; font-size: 0.85em; }
+    .status-Reimbursed { background: #d4edda; color: #155724; padding: 2px 8px; border-radius: 4px; font-weight: bold; font-size: 0.85em; }
     
     .receipt-link { font-size: 0.9em; text-decoration: underline; color: #007bff; cursor: pointer; }
+
+    /* RESPONSIVE FORM STYLES */
+    .form-box {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+      margin-bottom: 30px;
+    }
+
+    .form-row {
+      display: flex;
+      gap: 15px;
+      margin-bottom: 15px;
+    }
+
+    .form-col {
+      flex: 1; /* Takes equal space */
+    }
+
+    /* Make inputs touch-friendly */
+    input, select {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box; /* Ensures padding doesn't break layout */
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 600;
+      font-size: 0.9em;
+      color: #333;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    /* --- MOBILE SPECIFIC FIX --- */
+    @media (max-width: 600px) {
+      .form-row {
+        flex-direction: column; /* Stack items vertically */
+        gap: 0;
+      }
+      .form-col {
+        margin-bottom: 15px; /* Add space between stacked items */
+      }
+      h2 { font-size: 1.4rem; }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <div style="display:flex; justify-content:space-between; align-items:center;">
-      <h2>💰 Expense Reimbursement</h2>
-      <a href="main.html">Back to Dashboard</a>
+    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom: 20px;">
+      <h2 style="margin:0;">💰 Expense Reimbursement</h2>
+      <a href="main.html" style="font-size:0.9em;">Back to Dashboard</a>
     </div>
 
-    <div style="background:#fff; padding:20px; border-radius:8px; border:1px solid #ddd; margin-bottom:30px;">
-      <h3>Submit New Claim</h3>
+    <div class="form-box">
+      <h3 style="margin-top:0;">Submit New Claim</h3>
       <form id="expense-form">
-        <div style="display:flex; gap:10px;">
-          <div style="flex:1;">
+        
+        <div class="form-row">
+          <div class="form-col">
             <label>Category:</label>
             <select id="category">
               <option value="Travel">Travel (Flight/Cab)</option>
@@ -34,21 +92,25 @@
               <option value="Other">Other</option>
             </select>
           </div>
-          <div style="flex:1;">
+          <div class="form-col">
             <label>Amount:</label>
             <input type="number" id="amount" placeholder="0.00" required>
           </div>
         </div>
 
-        <label>Description:</label>
-        <input type="text" id="desc" placeholder="e.g. Uber to Airport" required>
+        <div style="margin-bottom: 15px;">
+          <label>Description:</label>
+          <input type="text" id="desc" placeholder="e.g. Uber to Airport" required>
+        </div>
 
-        <label>Upload Receipt (Image/PDF):</label>
-        <input type="file" id="receipt-file" accept="image/*,application/pdf">
+        <div style="margin-bottom: 20px;">
+          <label>Upload Receipt (Image/PDF):</label>
+          <input type="file" id="receipt-file" accept="image/*,application/pdf" style="background: #f9f9f9;">
+        </div>
 
-        <button type="submit" style="margin-top:10px;">Submit Claim</button>
+        <button type="submit" style="background-color: #007bff; color: white; border: none; border-radius: 4px;">Submit Claim</button>
       </form>
-      <div id="form-msg" style="margin-top:10px;"></div>
+      <div id="form-msg" style="margin-top:10px; text-align: center;"></div>
     </div>
 
     <div id="admin-inbox" style="display:none; margin-bottom:30px; border-top:2px dashed #ccc; padding-top:20px;">
