employee button added

--- a/documents.html
+++ b/documents.html
@@ -54,7 +54,7 @@
   <div class="container">
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
       <h2>📂 Document Vault</h2>
-      <a href="main.html" class="secondary">← Back to Dashboard</a>
+      <a href="main.html" class = "secondary">&larr; Back to Dashboard</a>
     </div>
 
     <div id="upload-section" class="upload-box" style="display:none;">
