--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
       <li><a href="helpdesk.html">🎧 Help Desk</a></li>
       <li><a href="documents.html">📂 Document Vault</a></li>
       <li><a href="performance.html">⭐ Performance & Appraisals</a></li>
+      <li><a href="employees.html" id="employees-link" style="display:none;">👥 Employees</a></li>      
       <li><a href="finance.html" id="finance-link" style="display:none;">📈 Company Finance</a></li>
       <li><a href="history.html" id="history-link" style="display:none; color:#6f42c1; font-weight:bold;">📜 Company Master Records</a></li>
       <li><a href="audit.html" id="audit-link" style="display:none;">🛡️ Audit Logs</a></li>
@@ -43,11 +44,10 @@
   <script src="main.js"></script>
 
   <nav class="mobile-nav">
-  <a href="main.html" class="nav-item">🏠<br>Home</a>
-  <a href="attendance.html" class="nav-item">⏱️<br>Clock</a>
-  <a href="leave.html" class="nav-item">🗓️<br>Leave</a>
-  <a href="status.html" class="nav-item">🔴<br>Status</a>
-</nav>
+    <a href="main.html" class="nav-item">🏠<br>Home</a>
+    <a href="attendance.html" class="nav-item">⏱️<br>Clock</a>
+    <a href="leave.html" class="nav-item">🗓️<br>Leave</a>
+    <a href="status.html" class="nav-item">🔴<br>Status</a>
+  </nav>
 </body>
-
 </html>
