--- a/audit.html
+++ b/audit.html
@@ -5,13 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audit Logs - GLBXTNT ERP</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Global Styles matching other pages */
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; background-color: #f4f6f9; color: #333; margin: 0; padding: 20px; }
+    
+    .container { 
+        max-width: 1000px; /* Slightly wider for logs */
+        margin: 0 auto; 
+        background: #fff; 
+        padding: 25px; 
+        border-radius: 8px; 
+        box-shadow: 0 2px 10px rgba(0,0,0,0.05); 
+    }
+
+    /* Header Alignment */
+    .header-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; }
+    .header-row h2 { margin: 0; color: #333; }
+    .header-row a { text-decoration: none; color: #555; font-weight: 500; transition: 0.2s; }
+    .header-row a:hover { color: #007bff; }
+
+    /* Audit List Table Styling */
+    #audit-list table { width: 100%; border-collapse: collapse; font-size: 0.9em; }
+    #audit-list th { background: #f1f1f1; text-align: left; padding: 12px; border-bottom: 2px solid #ddd; color: #555; }
+    #audit-list td { padding: 12px; border-bottom: 1px solid #eee; vertical-align: top; }
+    #audit-list tr:hover { background-color: #fcfcfc; }
+    
+    /* JSON Details styling */
+    code { background: #f4f4f4; padding: 2px 5px; border-radius: 4px; font-family: monospace; color: #d63384; word-break: break-all; }
+
+    /* Mobile Responsiveness */
+    @media (max-width: 768px) {
+        .container { padding: 15px; width: 100%; }
+        .header-row { flex-direction: column; align-items: flex-start; gap: 10px; }
+        .header-row a { font-size: 0.9em; }
+        #audit-list { overflow-x: auto; } /* Horizontal scroll for table */
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h2>Audit Logs</h2>
-    <div id="audit-list">Loading...</div>
-    <a href="main.html">Back to Dashboard</a>
+    <div class="header-row">
+        <h2>🛡️ Audit Logs</h2>
+        <a href="main.html">&larr; Back to Dashboard</a>
+    </div>
+
+    <div id="audit-list">Loading logs...</div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="audit.js"></script>
