--- a/employees.html
+++ b/employees.html
@@ -5,13 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Employees - GLBXTNT ERP</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Global Styles matching your other pages */
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; background-color: #f4f6f9; color: #333; margin: 0; padding: 20px; }
+    
+    .container { 
+        max-width: 1000px; 
+        margin: 0 auto; 
+        background: #fff; 
+        padding: 25px; 
+        border-radius: 8px; 
+        box-shadow: 0 2px 10px rgba(0,0,0,0.05); 
+    }
+
+    /* Header Alignment */
+    .header-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; }
+    .header-row h2 { margin: 0; color: #333; }
+    .header-row a { text-decoration: none; color: #555; font-weight: 500; transition: 0.2s; }
+    .header-row a:hover { color: #007bff; }
+
+    /* Employee Table Styling */
+    #employee-list table { width: 100%; border-collapse: collapse; margin-top: 10px; font-size: 0.95em; }
+    #employee-list th { background: #f8f9fa; text-align: left; padding: 12px; border-bottom: 2px solid #dee2e6; color: #555; font-weight: 600; }
+    #employee-list td { padding: 12px; border-bottom: 1px solid #eee; vertical-align: middle; color: #444; }
+    #employee-list tr:hover { background-color: #fcfcfc; }
+
+    /* Highlight Role Column */
+    #employee-list td:nth-child(3) { font-weight: bold; color: #007bff; }
+
+    /* Mobile Responsiveness */
+    @media (max-width: 768px) {
+        .container { padding: 15px; width: 100%; }
+        .header-row { flex-direction: column; align-items: flex-start; gap: 10px; }
+        .header-row a { font-size: 0.9em; }
+        
+        /* Make table scrollable on small screens */
+        #employee-list { overflow-x: auto; }
+        #employee-list table { min-width: 600px; }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h2>Employee List</h2>
-    <div id="employee-list">Loading...</div>
-    <a href="main.html">Back to Dashboard</a>
+    <div class="header-row">
+      <h2>👥 Employee List</h2>
+      <a href="main.html">&larr; Back to Dashboard</a>
+    </div>
+
+    <div id="employee-list">
+        <div style="text-align:center; padding:20px; color:#666;">Loading directory...</div>
+    </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="employees.js"></script>
