--- a/attendance.html
+++ b/attendance.html
@@ -105,5 +105,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="attendance.js"></script>
+  <script src="layout.js"></script>
+
 </body>
 </html>
