--- a/audit.html
+++ b/audit.html
@@ -55,5 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="audit.js"></script>
+    <script src="layout.js"></script>
+
 </body>
 </html>
