--- a/documents.html
+++ b/documents.html
@@ -90,5 +90,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="documents.js"></script>
+  <script src="layout.js"></script>
+
 </body>
 </html>
