--- a/employees.html
+++ b/employees.html
@@ -60,5 +60,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="employees.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
