--- a/expenses.html
+++ b/expenses.html
@@ -126,5 +126,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="expenses.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
