--- a/finance.html
+++ b/finance.html
@@ -118,5 +118,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="finance.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
