--- a/helpdesk.html
+++ b/helpdesk.html
@@ -40,5 +40,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="helpdesk.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
