--- a/history.html
+++ b/history.html
@@ -103,5 +103,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="history.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
