--- a/leave.html
+++ b/leave.html
@@ -102,5 +102,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="leave.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
