--- a/main.html
+++ b/main.html
@@ -10,7 +10,6 @@
   <div class="container">
     <div style="display:flex; justify-content:space-between; align-items:center;">
       <h1 id="welcome-msg">Welcome, User</h1>
-      <button id="logout-btn" style="background:#dc3545; font-size:0.8em;">Logout</button>
     </div>
     
     <div id="notice-board" style="background: #fff; border: 1px solid #ddd; border-left: 5px solid #007bff; padding: 15px; margin-bottom: 25px; border-radius: 5px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
@@ -42,6 +41,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="main.js"></script>
+  <script src="layout.js"></script>
 
   <nav class="mobile-nav">
     <a href="main.html" class="nav-item">🏠<br>Home</a>
