--- a/performance.html
+++ b/performance.html
@@ -137,5 +137,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="performance.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
