--- a/salary.html
+++ b/salary.html
@@ -97,5 +97,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="salary.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
