--- a/status.html
+++ b/status.html
@@ -107,5 +107,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
   <script src="supabase.js"></script>
   <script src="status.js"></script>
+  <script src="layout.js"></script>
 </body>
 </html>
